Force the fixed-wrapper's width to 220px since a fixed element has the viewport for a parent. Fixes a layout bug exposed by this bug's fix.

--- a/src/client/app/submit-work/aside/submit-work-aside.desktop.scss
+++ b/src/client/app/submit-work/aside/submit-work-aside.desktop.scss
@@ -13,6 +13,7 @@
       position: fixed;
       margin  : $margin-18;
       top     : 0;
+      width   : 220px;
     }
 
     height  : 100%;
